gccida/c1/record_reg_classes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1892:7: error: conflicting types for 'record_reg_classes'
void  record_reg_classes( 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:883:13: note: previous declaration is here
static void record_reg_classes  PARAMS ((int, int, rtx *, enum machine_mode *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1901:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v7; // rbp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1913:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1915:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v21; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1918:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v24; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1924:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v30; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1928:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v34; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1930:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v36; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1941:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v47; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1950:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v56; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1957:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1959:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1960:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v66; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:1998:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode[2]; // [rsp+60h] [rbp-DC8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:2000:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v106[2]; // [rsp+70h] [rbp-DB8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:2006:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v112; // [rsp+A4h] [rbp-D84h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:2011:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v117[64]; // [rsp+C0h] [rbp-D68h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/regclass.c:2043:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v76 = recog_data_0.operand[v75]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_reg_classes/src/obj/regclass.o] Error 1
